fixed active product alignment, closes #27

--- a/css/hud.sass
+++ b/css/hud.sass
@@ -103,6 +103,8 @@
   width: 12em
   .cash
     float: right
+  li
+    clear: both
 
 .hud-center-board h3
   font-weight: normal
